# linfo1341_projet

./: CMakeLists.txt  Makefile  code.txt  errror_notes.txt  file.txt  gitlog.stat  input_file  output_file  receiver  receiver_backup.txt  receiver_interrop  sender  sender_interrop  simple_test_val.sh  test.sh  todo.txt
src/: create_socket.c  create_socket.h  linked_list.c  linked_list.h  log.c  log.h  log.h.gch  old_sender.txt  packet.c  packet.h  real_address.c  real_address.h  receiver.c  sender.c  trtp.c  trtp.h  wait_for_client.c  wait_for_client.h
tests/: big_test.sh  run_tests.sh  simple_test.sh  simple_test_10_lost.sh  simple_test_val.sh  test.sh  test_small.sh
